# idf-component-cmake

./: CMakeLists.txt  README.md
component/hello_component/: hello_component_src.c
components/hello_component/: CMakeLists.txt
components/hello_component/include/: hello_component_h.h
main/: CMakeLists.txt  main.c
main/hello_added_component/: CMakeLists.txt  hello_added_component_src.c
main/hello_added_component/include/: hello_added_component_h.h
main/hello_cmake/: CMakeLists.txt  hello_cmake_src.c
main/hello_cmake/include/: hello_cmake_h.h
